<resources>
    <string name="app_name">ProjetoFinalKotlin</string>

    <!-- Home -->
    <string name="home_title">Home</string>
    <string name="home_to_task">Tarefas</string>
    <string name="home_to_weather">Previsão do Tempo</string>

    <!-- Recovery Password -->
    <string name="main_subtitle_txt">Desenvolvimento de Apps com Kotlin [24E1_2]</string>
    <string name="main_subtitle2_txt">Integrações, Monetização e Publicação de Apps Kotlin [24E1_3]</string>

    <!-- Login -->
    <string name="login_title_txt">Olá novamente</string>
    <string name="login_subtitle_txt">Você fez falta!</string>
    <string name="login_email_txt">E-mail:</string>
    <string name="login_password_txt">Senha:</string>
    <string name="login_recovery_password_txt">Recuperar senha</string>
    <string name="login_login_btn_txt">Login</string>
    <string name="login_login_google_btn_txt">Logar com o google</string>
    <string name="login_new_account_btn_txt">Ainda não tem uma conta? <b>Crie uma gratuitamente!</b></string>
    <string name="login_account_toast_success">Usuário logado com sucesso!</string>
    <string name="login_account_toast_error">Erro ao logar:</string>
    <string name="login_toast_empty_fields_txt">Campos vazios não são permitidos!</string>
    <string name="login_create_account_btn_txt">Criar conta</string>

    <!-- Create Account -->
    <string name="ca_title_txt">Crie sua conta</string>
    <string name="ca_name_txt">Nome:</string>
    <string name="ca_email_txt">E-mail:</string>
    <string name="ca_password_txt">Senha:</string>
    <string name="ca_password_confirmation_txt">Confirme sua senha:</string>
    <string name="ca_create_account_btn_txt">Criar conta</string>
    <string name="ca_create_account_toast_success">Usuário criado com sucesso!</string>
    <string name="ca_create_account_toast_error">Erro ao criar usuário:</string>
    <string name="ca_create_account_empty_fields_txt">Campos vazios não são permitidos!</string>
    <string name="ca_create_account_passwords_do_not_match_txt">As senhas não são iguais</string>
    <string name="ca_create_account_passwords_6digits_error_txt">A senha deve ter no mínimo 6 caracteres.</string>
    <string name="ca_create_account_passwords_uppercase_error_txt">A senha deve conter pelo menos 1 letra maiúscula.</string>
    <string name="ca_create_account_password_info_txt">A senha deve ter 6 dígitos e 1 letra maiúscula.</string>
    <string name="ca_create_account_invalid_email_error_txt">Digite um e-mail válido.</string>

    <!-- Recovery Password -->
    <string name="rp_title_txt">Recuperar senha</string>
    <string name="rp_subtitle_txt">Coloque seu e-mail para receber um código de verificação</string>
    <string name="rp_receive_code_btn_txt">Receber código</string>
    <string name="rp_receive_code_sent_toast_txt">Código enviado com sucesso</string>
    <string name="rp_receive_code_sent_toast_error_txt">Erro de envio do código: </string>

    <!-- Task -->
    <string name="task_title_txt">Tarefas</string>
    <string name="task_toast_error">Erro ao carregar tarefas:</string>

    <!-- Edit Task -->
    <string name="edit_task_title_txt">Editar tarefa</string>
    <string name="edit_task_title_tv_txt">Título:</string>
    <string name="edit_task_description_txt">Descrição:</string>
    <string name="edit_task_save_btn_txt">Salvar</string>
    <string name="edit_task_toast_error_txt">Campos vazios não são permitidos!</string>
    <string name="edit_task_toast_success_txt">Salvo com sucesso!</string>
    <string name="edit_task_take_picture_title">Tirar foto</string>

    <!-- RV Item -->
    <string name="rv_item_title">Título</string>
    <string name="rv_item_description">Descrição</string>
    <string name="rv_item_condition">Expirada</string>

    <!-- Weather -->
    <string name="weather_title_txt">Previsão do Tempo</string>
    <string name="wheater_toast_error">Erro ao carregar a previsão de tempo.</string>
    <string name="wheater_xml_example_city_name">city_name</string>
    <string name="wheater_xml_example_city_country">city_country</string>
    <string name="wheater_xml_example_last_update">last_update</string>
    <string name="wheater_xml_example_temp">temp</string>
    <string name="wheater_xml_example_wind">wind</string>
    <string name="wheater_xml_example_humidity">humidity</string>
    <string name="wheater_xml_example_feelsLike">feelsLike</string>

    <!-- SaveBtn -->
    <string name="save_btn_txt">Salvar</string>

    <!-- FCM -->
    <string name="fcm_toast_notification_title">Título: </string>
    <string name="fcm_toast_notification_text">Texto: </string>

    <!-- TaskService -->
    <string name="tasks_service_notification_message_title">Tarefas expiradas: </string>

</resources>