<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_back"
        app:iconSize="24dp"
        app:iconTint="@color/myGray"
        app:layout_constraintBottom_toBottomOf="@id/title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_txt" />

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/home_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/task_btn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="300dp"
        android:elevation="10dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/home_to_task"
        android:textAllCaps="false"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/weather_btn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="400dp"
        android:elevation="10dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/home_to_weather"
        android:textAllCaps="false"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>