<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.CreateAccountActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_back"
        app:iconSize="24dp"
        app:iconTint="@color/myGray"
        app:layout_constraintBottom_toBottomOf="@id/title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_txt" />

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/ca_title_txt"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:background="@color/myGray"
        android:src="@drawable/face"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/take_picture_btn"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@android:color/transparent"
        android:paddingStart="108dp"
        android:paddingTop="120dp"
        android:paddingEnd="2dp"
        android:textColor="@color/myGray"
        app:icon="@drawable/ic_camera"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="@id/picture"
        app:layout_constraintEnd_toEndOf="@id/picture"
        app:layout_constraintStart_toStartOf="@id/picture"
        app:layout_constraintTop_toTopOf="@id/picture" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/ca_email_txt"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_txt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_account_email_til"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_email_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/ca_password_txt"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_email_til" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_account_password_til"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/myGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_password_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_confirmation_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/ca_password_confirmation_txt"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_password_til" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_account_password_confirmation_til"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/myGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirmation_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_account_password_confirmation_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/ca_create_account_password_info_txt"
        android:textColor="@color/myBlue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/create_account_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_password_confirmation_til" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_btn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="50dp"
        android:elevation="10dp"
        android:fontFamily="@font/comic_neue"
        android:text="@string/ca_create_account_btn_txt"
        android:textAllCaps="false"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>